# SimCube

./: .clang-format  .gitignore  CMakeLists.txt
SimCube/: CMakeLists.txt  main.cpp
SimCube/device/dvd/: dvd.cpp
SimCube/device/gekko/: gekko.cpp  jit_x64.cpp  power_pc_tables.cpp
SimCube/device/memory/: ram.cpp
SimCube/disc/: ciso_disc.cpp  game_disc.cpp
SimCube/include/device/: device.h
SimCube/include/device/dvd/: dvd.h  dvd_regs.h
SimCube/include/device/gekko/: execution.h  gekko.h  gekko_regs.h  jit_x64.h  power_pc_tables.h
SimCube/include/device/memory/: ram.h
SimCube/include/device/msg/: device_msg.h
SimCube/include/disc/: ciso_disc.h  game_disc.h
SimCube/include/logging/: logger.h
SimCube/include/util/: alignment.h  endian.h  types.h
